fix color contrast error

--- a/index.css
+++ b/index.css
@@ -56,26 +56,25 @@ input {
 
 button {
   border: none;
-  background-color: hsl(191, 82%, 43%);
-  color: #fff;
+  background-color: hsl(55, 96%, 75%);
+  color: hsl(0, 0%, 25%);
   padding: 8px 16px;
   font-weight: 700;
-  font-size: 18px;
-  box-shadow: 1px 1px 3px hsl(0, 0%, 50%);
+  font-size: 20px;
   margin: 0 auto;
   display: block;
+  border-left: 2px solid black;
 }
 
 .action_form {
   margin:auto;
   width: fit-content;
-
 }
 
 .action {
   display:flex;
-  border: 1px solid black;
-  
+  border: 2px solid black;
+  box-shadow: 10px 5px 5px gray;
 }
 
 img {
